{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "SoccerPool",
            "id": "a7e8b98a-baba-440a-b170-929a54ff91c9",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "60f5a373-a31e-48d1-bb4d-06f91f23d7c2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "318ca305-7460-43c9-b080-d3f5c0b83217",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d13159ef-d15b-48f1-86c7-33a0dd7249eb",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "927a69ec-7274-44ad-8ce3-e95cfc1269e3",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "1b616cd1-ce2e-4bfa-a214-f3d0a0bb8234",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "c5e4764e-89a4-44a0-8b93-c12949d4877c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "4c532093-2b12-48c4-984a-2eac0081ad69",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "563a5b5a-2dc8-4ca5-9529-adee98d737dd",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc71cc1c-0016-4f2f-87a3-4375092c387e",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MiniGolf",
            "id": "3ba866d6-4297-448c-bab9-2ce210131673",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "697fb5e6-d811-4a63-b6ab-7eb41fad0a74",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "560451e8-9381-4486-9470-3a639a1b59ce",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "46e9505f-fdd3-4174-b6b8-99c9c9f31429",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52c8c5d0-93ae-4228-9eb2-94007440748c",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mini Soccer",
            "id": "2431be8b-f867-40c8-85e6-aefa3800f910",
            "actions": [
                {
                    "name": "Blue Movements",
                    "type": "PassThrough",
                    "id": "fd1bcf62-0469-46c3-8264-1b27a4a020de",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Red Movements",
                    "type": "PassThrough",
                    "id": "6d225a25-c050-4db9-8d7c-b00411763f4f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c978b6f4-ea8f-49f4-9afb-0be0dcecbe90",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blue Movements",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dde5009-205c-4232-9f19-90c45b6f8128",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Red Movements",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BluePlayer",
            "id": "b4e8cfcc-6337-4c5c-93c0-fbc2427e4eca",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "d435b611-0474-4816-981c-4d8cbf206c79",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7218710b-be1a-454b-bcbf-af2e9a1f4059",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RedPlayer",
            "id": "ea6d878b-dd70-499e-9b16-60f5a97d2166",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "fb3f4a13-dfc4-4770-ba41-650dd4050bdf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d33c53f-5f93-47db-b78e-427e5f99eb6e",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BrickBreaker",
            "id": "4e90fa7f-3242-4b3f-adde-938d98496634",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "PassThrough",
                    "id": "cca7648b-6739-4009-bdda-1a2483fec19e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryPosition",
                    "type": "Value",
                    "id": "b87e33e3-8737-4cc9-b38a-675ba099b69c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1433b32c-8506-43f0-b480-1210b72a17c1",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6b46148-45a2-48fe-b1f0-c904b2ca59da",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}